Se implemento la logica el alta de una factura en base a los servicios contratados de un cliente. Además se puede visualizar los detalles de las mismas. Closes: #4, #6